--- a/resume.tex
+++ b/resume.tex
@@ -144,7 +144,7 @@ Secured a \cusemph{National Rank of 26, Zonal Rank of 2} in National Cyber Olymp
 %	KEY SKILLS SECTION
 %-------------------------------------------------------------------------------
 \section{Key\\Skills}
-\cusemph{Programming}: Python, Golang, C++/C, Unix Scripting, Git, Tensorflow, Pytorch, Keras, MATLAB, Java/Kotlin (Android), Haskell, \LaTeX, Assembly (x86, MIPS), Verilog, SQL, HTML, ReactJS, Redis, Django
+\cusemph{Programming}: Python, Golang, C++/C, Unix Scripting, Git, Tensorflow, Pytorch, Keras, MapReduce (Hadoop), MATLAB, Java/Kotlin (Android), Haskell, \LaTeX, Assembly (x86, MIPS), Verilog, SQL, HTML, ReactJS, Redis, Django
 \\
 
 \vspace{-4ex}
