--- a/resume.tex
+++ b/resume.tex
@@ -53,7 +53,7 @@
 \website{https://sayan.page}{\url{https://sayan.page}}
 \github{https://github.com/say4n}{\url{https://github.com/say4n}}
 \phone{+91-833-700-5364}
-\address{Barcelona, Spain}
+\address{Kolkata, India}
 
 %-------------------------------------------------------------------------------
 
@@ -81,12 +81,18 @@ GPA: 9.28/10\\
 
 \section{Experience}
 
-\cusemph{Mentor, Google Summer of Code}, mlpack.org \timeline{May '21 - Present}\\
+
+\cusemph{Research Support}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Present}\\
+Research on applying ML methods to optimize continuos variable quantum computing circuits.\\
+
+\vspace{-4ex}
+
+\cusemph{Mentor, Google Summer of Code}, mlpack.org \timeline{May '21 - Aug '21}\\
 Guiding mentees on multi-objective optimization methods for mlpack, a C++ ML library.\\
 
 \vspace{-4ex}
 
-\cusemph{Research Fellow, AI Research Institute (IIIA-CSIC)}, Barcelona \timeline{Nov '20 - Present}\\
+\cusemph{Research Fellow, AI Research Institute (IIIA-CSIC)}, Barcelona \timeline{Nov '20 - Aug '21}\\
 Applying RL to model realistic behaviour of NPCs in simulation environments.\\
 
 \vspace{-4ex}
