Adds UPF details.

--- a/resume.tex
+++ b/resume.tex
@@ -63,7 +63,7 @@
 %	EDUCATION SECTION
 %-------------------------------------------------------------------------------
 \section{Education}
-\cusemph{Universitat Pompeu Fabra}, Barcelona, Spain \timeline{2020 - Present}\\
+\cusemph{Universitat Pompeu Fabra}, Barcelona, Spain \timeline{2020 - 2021}\\
 {\it Master of Science}, Intelligent Interactive Systems\\
 
 \vspace{-4ex}
