Updates QIG job title.

--- a/resume.tex
+++ b/resume.tex
@@ -82,7 +82,7 @@ GPA: 9.28/10\\
 \section{Experience}
 
 
-\cusemph{Research Support}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Present}\\
+\cusemph{Research Programmer}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Present}\\
 Research on applying ML methods to optimize continuos variable quantum computing circuits.\\
 
 \vspace{-4ex}
