--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,8 @@
 }
 \urlstyle{same}
 \usepackage[left=0.7in, right=2in, top=0.9in]{geometry}
-\usepackage{lipsum}
+
+\definecolor{mgray}{gray}{0.8}
 
 % Increase text height
 \textheight=700pt
@@ -70,7 +71,6 @@
 
 \cusemph{Jadavpur University}, Kolkata, India \timeline{2016 - 2020}\\
 {\it Bachelor of Engineering}, Electronics \& Telecommunication Engineering\\
-GPA: 9.28/10\\
 \sectionline
 %-------------------------------------------------------------------------------
 
@@ -85,44 +85,49 @@ GPA: 9.28/10\\
 \cusemph{Research Programmer}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Present}\\
 Research on applying ML methods to optimize continuos variable quantum computing circuits.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
 
 \cusemph{Mentor, Google Summer of Code}, mlpack.org \timeline{May '21 - Aug '21}\\
 Guiding mentees on multi-objective optimization methods for mlpack, a C++ ML library.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
 
 \cusemph{Research Fellow, AI Research Institute (IIIA-CSIC)}, Barcelona \timeline{Nov '20 - Aug '21}\\
 Applying RL to model realistic behaviour of NPCs in simulation environments.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
+
+\cusemph{Core Contributor, mlpack.org}, Remote \timeline{Sep '20 - Present}\\
+Maintaining the popular C++ based open-source machine learning framework mlpack.\\
+
+\vspace{-4.5ex}
 
 \cusemph{Developer Associate, Samsung R\&D Institute}, Bangalore \timeline{May '19 - Jul '19}\\
 Significantly decreased latency, increased throughput over QUIC protocol for wireless use.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
 
-\cusemph{Mentor, Deep RL Nanodegree}, Udacity \timeline{Jul '19 - Jan '20}\\
+\cusemph{Mentor, Deep Reinforcement Learning Nanodegree}, Udacity \timeline{Jul '19 - Jan '20}\\
 Guided students taking Udacity's Deep RL ``Nanodegree'', weekly meetings, coursework.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
 
-\cusemph{Research Fellow, VIP Lab}, IIT Bombay \timeline{May '18 - Jul '18}\\
+\cusemph{Research Fellow, Vison \& Image Processing Lab}, IIT Bombay \timeline{May '18 - Jul '18}\\
 Worked on deep learning (CNNs, GANs) based CV methods for image co-segmentation with \supervisor{Prof. Subhasis Chaudhuri}.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
 
 \cusemph{Research Assistant, AI Lab}, Javapur University \timeline{Aug '18 - May '20}\\
 Worked on multi-agent RL, game theory, neural control interface \& algorithms research with \supervisor{Prof. Amit Konar}.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
 
-\cusemph{Community Mentor, CNN Course}, Coursera \timeline{Jan '18 - Jul '19}\\
+\cusemph{Community Mentor, Convolutional NN Course}, Coursera \timeline{Jan '18 - Jul '19}\\
 Guided students taking Andrew Ng's CNN course on Coursera via community forums.\\
 
-\vspace{-4ex}
+\vspace{-4.5ex}
 
-\cusemph{Researcher, NLP Lab}, Javapur University \timeline{Jul '17 - Apr '19}\\
+\cusemph{Research Assistant, NLP Lab}, Javapur University \timeline{Jul '17 - Apr '19}\\
 Worked on NLP methods for abstractive text summarization with \supervisor{Prof. Sudip K. Naskar}.
 
 \vspace{-2ex}
@@ -150,7 +155,7 @@ Secured a \cusemph{National Rank of 26, Zonal Rank of 2} in National Cyber Olymp
 %	KEY SKILLS SECTION
 %-------------------------------------------------------------------------------
 \section{Key\\Skills}
-\cusemph{Programming}: Python, Golang, C++/C, Unix Scripting, Git, Tensorflow, Pytorch, Keras, MapReduce (Hadoop), MATLAB, Java/Kotlin (Android), Haskell, \LaTeX, Assembly (x86, MIPS), Verilog, SQL, HTML, ReactJS, Redis, Django
+\cusemph{Programming}: Python, Golang, C++/C, Unix Scripting, Git, Tensorflow, Pytorch, Keras, MapReduce (Hadoop), MATLAB, Java/Kotlin (Android), Haskell, \LaTeX, Assembly (x86, MIPS), Verilog, SQL, HTML, React, Typescript, Redis, Django, Flask
 \\
 
 \vspace{-4ex}
@@ -189,8 +194,9 @@ Secured a \cusemph{National Rank of 26, Zonal Rank of 2} in National Cyber Olymp
 %-------------------------------------------------------------------------------
 \section{Select\\Projects}
 
+\href{https://github.com/say4n/metal.compute}{\cusemph{metal.compute}} -- A C++ example showcasing the use of Apple's Metal API for general purpose GPU accelerated compute.\\
 \href{https://github.com/say4n/bandit.rl}{\cusemph{bandit.rl}} -- A k-armed bandit test bed implementation for comparing various reinforcement learning algorithms.\\
-\href{https://github.com/mlpack/ensmallen}{\cusemph{mlpack/ensmallen}} -- Implemented a framework for multi-objective optimization in the C++ machine learning library mlpack.\\
+\href{https://github.com/mlpack/ensmallen}{\cusemph{mlpack}} -- Implemented a framework for multi-objective optimization in the popular open-source C++ machine learning library mlpack.\\
 \href{https://github.com/say4n/rtx.go}{\cusemph{rtx.go}} -- A brute force ray tracing implementation.\\
 \href{https://github.com/say4n/eightyfive}{\cusemph{eightyfive}} -- An emulator for Intel’s 8085.\\
 \href{https://github.com/say4n/ysh}{\cusemph{ysh}} -- An UNIX shell implementation.\\
@@ -218,6 +224,9 @@ Available on request.
 \vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
+
+\vfill
+\hfill \color{mgray}{Last updated on \today}
 
 
 \end{resume}
