Adds dns.amplify.

--- a/resume.tex
+++ b/resume.tex
@@ -194,6 +194,7 @@ Secured a \cusemph{National Rank of 26, Zonal Rank of 2} in National Cyber Olymp
 %-------------------------------------------------------------------------------
 \section{Select\\Projects}
 
+\href{https://github.com/say4n/dns.amplify}{\cusemph{dns.amplify}} -- A proof of concept implementation to understand DNS amplification based DDoS attacks.\\
 \href{https://github.com/say4n/metal.compute}{\cusemph{metal.compute}} -- A C++ example showcasing the use of Apple's Metal API for general purpose GPU accelerated compute.\\
 \href{https://github.com/say4n/bandit.rl}{\cusemph{bandit.rl}} -- A k-armed bandit test bed implementation for comparing various reinforcement learning algorithms.\\
 \href{https://github.com/mlpack/ensmallen}{\cusemph{mlpack}} -- Implemented a framework for multi-objective optimization in the popular open-source C++ machine learning library mlpack.\\
