--- a/resume.tex
+++ b/resume.tex
@@ -81,8 +81,17 @@
 
 \section{Experience}
 
+\cusemph{SDE}, Amazon, Edinburgh  \timeline{Apr '22 - Jun '22}\\
+SDE at Amazon Advertising.\\
 
-\cusemph{Research Programmer}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Present}\\
+\vspace{-4.5ex}
+
+\cusemph{SRE}, Sea AI Lab, Singapore \timeline{Apr '22 - Jun '22}\\
+DevOps, MLOps -- created monitoring tools for internal HPC cluster, established incident management practices, migrated actively used container registry with zero downtime.\\
+
+\vspace{-4.5ex}
+
+\cusemph{Research Programmer}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Mar '22}\\
 Research on applying ML methods to optimize continuos variable quantum computing circuits.\\
 
 \vspace{-4.5ex}
