--- a/resume.tex
+++ b/resume.tex
@@ -81,7 +81,7 @@
 
 \section{Experience}
 
-\cusemph{SDE}, Amazon, Edinburgh  \timeline{Apr '22 - Jun '22}\\
+\cusemph{SDE}, Amazon, Edinburgh  \timeline{Jul '22 - Present}\\
 SDE at Amazon Advertising.\\
 
 \vspace{-4.5ex}
