--- a/resume.tex
+++ b/resume.tex
@@ -81,12 +81,12 @@
 
 \section{Experience}
 
-\cusemph{SDE}, Amazon, Edinburgh  \timeline{Jul '22 - Present}\\
+\cusemph{Software Development Engineer}, Amazon, Edinburgh  \timeline{Jul '22 - Present}\\
 SDE at Amazon Advertising.\\
 
 \vspace{-4.5ex}
 
-\cusemph{SRE}, Sea AI Lab, Singapore \timeline{Apr '22 - Jun '22}\\
+\cusemph{Site Reliability Engineer}, Sea AI Lab, Singapore \timeline{Apr '22 - Jun '22}\\
 DevOps, MLOps -- created monitoring tools for internal HPC cluster, established incident management practices, migrated actively used container registry with zero downtime.\\
 
 \vspace{-4.5ex}
@@ -124,20 +124,20 @@ Guided students taking Udacity's Deep RL ``Nanodegree'', weekly meetings, course
 \cusemph{Research Fellow, Vison \& Image Processing Lab}, IIT Bombay \timeline{May '18 - Jul '18}\\
 Worked on deep learning (CNNs, GANs) based CV methods for image co-segmentation with \supervisor{Prof. Subhasis Chaudhuri}.\\
 
-\vspace{-4.5ex}
+% \vspace{-4.5ex}
 
-\cusemph{Research Assistant, AI Lab}, Javapur University \timeline{Aug '18 - May '20}\\
-Worked on multi-agent RL, game theory, neural control interface \& algorithms research with \supervisor{Prof. Amit Konar}.\\
+% \cusemph{Research Assistant, AI Lab}, Javapur University \timeline{Aug '18 - May '20}\\
+% Worked on multi-agent RL, game theory, neural control interface \& algorithms research with \supervisor{Prof. Amit Konar}.\\
 
-\vspace{-4.5ex}
+% \vspace{-4.5ex}
 
-\cusemph{Community Mentor, Convolutional NN Course}, Coursera \timeline{Jan '18 - Jul '19}\\
-Guided students taking Andrew Ng's CNN course on Coursera via community forums.\\
+% \cusemph{Community Mentor, Convolutional NN Course}, Coursera \timeline{Jan '18 - Jul '19}\\
+% Guided students taking Andrew Ng's CNN course on Coursera via community forums.\\
 
-\vspace{-4.5ex}
+% \vspace{-4.5ex}
 
-\cusemph{Research Assistant, NLP Lab}, Javapur University \timeline{Jul '17 - Apr '19}\\
-Worked on NLP methods for abstractive text summarization with \supervisor{Prof. Sudip K. Naskar}.
+% \cusemph{Research Assistant, NLP Lab}, Javapur University \timeline{Jul '17 - Apr '19}\\
+% Worked on NLP methods for abstractive text summarization with \supervisor{Prof. Sudip K. Naskar}.
 
 \vspace{-2ex}
 \sectionline
