--- a/resume.tex
+++ b/resume.tex
@@ -53,8 +53,8 @@
 \email{sayan.goswami.106@gmail.com}
 \website{https://sayan.page}{\url{https://sayan.page}}
 \github{https://github.com/say4n}{\url{https://github.com/say4n}}
-\phone{+91-833-700-5364}
-\address{Kolkata, India}
+\phone{+44 07765745821}
+\address{Edinburgh, Scotland}
 
 %-------------------------------------------------------------------------------
 
@@ -82,7 +82,7 @@
 \section{Experience}
 
 \cusemph{Software Development Engineer}, Amazon, Edinburgh  \timeline{Jul '22 - Present}\\
-SDE at Amazon Advertising.\\
+SDE at Amazon Ads. Creating realtime advertising performance reporting dashboards for external and internal customers across various Ad products.\\
 
 \vspace{-4.5ex}
 
