Update skills sections.

--- a/resume.tex
+++ b/resume.tex
@@ -164,7 +164,7 @@ Secured a \cusemph{National Rank of 26, Zonal Rank of 2} in National Cyber Olymp
 %	KEY SKILLS SECTION
 %-------------------------------------------------------------------------------
 \section{Key\\Skills}
-\cusemph{Programming}: Python, Golang, C++/C, Unix Scripting, Git, Tensorflow, Pytorch, Keras, MapReduce (Hadoop), MATLAB, Java/Kotlin (Android), Haskell, \LaTeX, Assembly (x86, MIPS), Verilog, SQL, HTML, React, Typescript, Redis, Django, Flask
+\cusemph{Languages}: I’m fluent in Python, Kotlin, React, and English. I’ve also written a good amount of SQL, Go, JavaScript, and C++. Proficient at shell scripting, and quick at picking up new languages as needed.
 \\
 
 \vspace{-4ex}
