--- a/resume.tex
+++ b/resume.tex
@@ -81,7 +81,7 @@
 
 \section{Experience}
 
-\cusemph{Software Development Engineer}, Amazon, Edinburgh  \timeline{Jul '22 - Present}\\
+\cusemph{Software Development Engineer II}, Amazon, Edinburgh  \timeline{Jul '22 - Present}\\
 SDE at Amazon Ads. Creating realtime advertising performance reporting dashboards for external and internal customers across various Ad products.\\
 
 \vspace{-4.5ex}
