starts migration to typst
watch changes with: find . -name "resume.*" | entr make

--- a/resume.tex
+++ b/resume.tex
@@ -91,7 +91,7 @@ DevOps, MLOps -- created monitoring tools for internal HPC cluster, established 
 
 \vspace{-4.5ex}
 
-\cusemph{Research Programmer}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Mar '22}\\
+\cusemph{ML Engineer}, Quantum Information Group, UAB, Barcelona \timeline{Sep '21 - Mar '22}\\
 Research on applying ML methods to optimize continuos variable quantum computing circuits.\\
 
 \vspace{-4.5ex}
